# stringMultipurposeDevice

./: .gitignore  CMakeLists.txt  DynamometerOverCan.qml  DynamometerOverCan_copy.qml  MainPage.qml  NetworkList.qml  appcomponents.cpp  appcomponents.h  backendsystem.cpp  backendsystem.h  canmanager.cpp  canmanager.h  colors.js  crc.cpp  crc.h  dynamometerdata.cpp  dynamometerdata.h  eglfs.json  fix-eglfs.sh  main.cpp  main.qml  protocol_constants.h  protocolmanager.cpp  protocolmanager.h  tcpclient.cpp  tcpclient.h  udpclient.cpp  udpclient.h  wifiScanDialog.qml  wifi_dbus_types.cpp  wifi_dbus_types.h  wifimanager.cpp  wifimanager.h  wifimanager_cpp  wifimanager_h
QML/: colors.js  main.qml  networkUtils.js
QML/Components/: DynamometerValue.qml  NetworkList.qml  ShutdownIcon.qml  SwipeButtonArea.qml  TcpStatusIcon.qml  WiFiNetworkItem.qml  WiFiStatusBar.qml  WiFiStatusIcon.qml
QML/Dialogs/: PasswordDialog.qml  ShutdownDialog.qml  WifiScanDialog.qml
QML/Pages/: CanLoggerPage.qml  DynamometerOverCan.qml  DynamometerOverCan_copy.qml  MainPage.qml
resources/: resources.qrc
